# PNG-Compression

./: CMakeLists.txt  ImageCompressor.cpp  ImageCompressor.h  Makefile  PNGImage.cpp  PNGImage.h  PNGStructs.cpp  PNGStructs.h  README.md  main.cpp
